CHANGELOG
--------------------------

ClanSphere 2009.0.1 >> 2009-07-0X
___________________________________________________________

-- Recommended PHP version changed to 5.3.0

>> Security: Closed at least two retroactive SQL Injection possibilities (hajo)

-> Added function cs_cache_clear and a check for the unicode extension (hajo)
-> Fixed charset handling with file operations and escaped special lang chars (hajo)
-> Fixed cs_sql_insertid with Microsoft SQL Server [sqlsrv extension] (hajo)
-> Fixed handling of JPG files in gd-lib with PHP 5.3 and newer (hajo)
-> Moved 'xhtml_old' mode activation to array cs_main for use in setup.php (hajo)
-> Reworked eventguests to make user_id optional and contain more details (hajo)
-> Reworked users navlogin content and theme files (hajo, x-ray)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2009.0 >> 2009-06-12
___________________________________________________________

-> Added support for Microsoft SQL Server 2005 and 2008 using the sqlsrv extension (hajo)
-> Added title of articles, board threads, news and static pages to the end of func:title (hajo)
-> Added new USK icons (gahero)
-> Added zlib compression to cs_template output (hajo)
-> Moved email options to contact mod and added smtp settings (hajo)
-> Removed many reset buttons, because they are not useful (hajo)
-> Removed support for RSS in servers mod (hajo)
-> Reworked handling of charsets for PostgreSQL and MySQL drivers (hajo)
-> Reworked parts of the cups module: now a cups tree is included and the match generation is no longer by random after the first round (duriel)

-- Fixed a huge number of bugs that were reported at "Trac" --


ClanSphere 2009.0 RC3 >> 2009-05-17
___________________________________________________________

-> Added abcode editor bridge to allow the usage of other wysiwyg software (hajo)
-> Added compatible-view for old browsers to cs_manage function (hajo)