@@ -7,6 +7,7 @@ ___________________________________________________________
 -- Recommended PHP version changed to 5.3.0
 
 >> Security: Closed at least two retroactive SQL Injection possibilities (hajo)
+>> Security: Closed at least one SQL Injection possibility in gbook mod (hajo)
 
 -> Added function cs_cache_clear and a check for the unicode extension (hajo)
 -> Fixed charset handling with file operations and escaped special lang chars (hajo)
